# ComfyUI-PixlStash

./: .comfyignore  .gitignore  LICENSE  PixlStash-LoadAndSave.json  README.md  __init__.py  connection.py  loader.py  proxy_routes.py  pyproject.toml  requirements.txt  saver.py
doc/: comfyui-nodes-design.md
examples/: PixlStash-CurateRoundtrip.json  PixlStash-FaceLikenessGate-Upscale.json  PixlStash-FaceLikenessGate.json  PixlStash-ImageEdit.json  PixlStash-LikenessSearch.json  PixlStash-Outpaint.json  PixlStash-PictureLikenessGate.json  PixlStash-PictureLikenessGateUpscale.json  PixlStash-SearchImageEdit.json  PixlStash-SearchToSet.json  PixlStash-Searches.json  PixlStash-SemanticSearch.json  PixlStash-Upscale.json  README.md
nodes/: __init__.py  character_loader.py  connector.py  face_likeness_gate.py  likeness_search.py  picture_likeness_gate.py  picture_loader.py  picture_saver.py  project_loader.py  semantic_search.py  set_loader.py
tests/: _bootstrap.py  test_id_extraction.py  test_multi_user.py  test_path_traversal.py  test_proxy_ssrf.py
web/js/: combo_widgets.js  picker.js
