[project]
name = "pixlstash"
description = "ComfyUI nodes for PixlStash (https://pixlstash.dev)"
version = "1.1.3"
license = { file = "LICENSE" }
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["requests>=2.28.0", "Pillow>=9.0.0"]

[project.urls]
Repository = "https://github.com/Pikselkroken/ComfyUI-PixlStash"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://pixlstash.dev"
"Bug Tracker" = "https://github.com/Pikselkroken/ComfyUI-PixlStash/issues"

[tool.comfy]
PublisherId = "pikselkroken"
DisplayName = "ComfyUI-PixlStash"
Icon = "https://pixlstash.dev/assets/logo.png"
includes = []
requires-comfyui = ">=0.20.0"  # ComfyUI version compatibility
